Wed Mar 14 17:18:23 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update
	* include/tdssrv.h src/pool/user.c src/server/login.c:
	* src/server/query.c src/server/server.c src/server/unittest.c:
	- update server stuff, at least login works
	* src/tds/tdsstring.c: fix possible mising NUL terminator
	* src/apps/tsql.c: fix wrong error handler result

Wed Mar 14 09:47:24 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html include/tds.h: update documentation

Tue Mar 13 17:24:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/pool/user.c src/server/login.c:
	* src/server/unittest.c src/tds/login.c src/tds/query.c:
	- use mnemonic for packet types

Tue Mar 13 16:45:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: added known tokens

Tue Mar 13 14:18:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: updated from code

Mon Mar 12 14:27:14 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h include/dblib.h include/des.h include/md4.h:
	* include/md5.h include/replacements.h include/tdsiconv.h:
	* include/tdsstring.h include/replacements/readpassphrase.h:
	* src/server/Makefile.am:
	- privatize functions using gcc visibility if available
	- privatize server library

Mon Mar 12 13:31:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/blk_in2.c(added) src/ctlib/unittests/Makefile.am:
	- added test from ML to test cancel and bulk together

Mon Mar 12 10:52:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: improved, added types

Fri Feb 16 14:52:10 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: improve documentation

Mon Feb 12 14:29:53 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/dblib/dblib.c: Increase size of dbprrow() conversion buffer to 8K.

Mon Feb 12 10:53:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/timeout3.c: